tests/manifests/test-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
  namespace: test-deployment
spec:
  replicas: 3
  selector: {}
  template:
    spec:
      containers:
        - name: echo
          image: nginx:1.14.2
---
