tests/manifests/test-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx
  namespace: test-deployment
spec:
  selector:
    app.kubernetes.io/name: nginx
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
